--- a/public/global.css
+++ b/public/global.css
@@ -3,6 +3,7 @@ body {
   position: relative;
   width: 100%;
   height: 100%;
+  background-color: #333333;
 }
 
 body {
@@ -78,7 +79,7 @@ main {
 h2 {
   font-size: 40px;
   text-align: center;
-  color: black;
+  color: white;
 }
 .fixed-bar {
   display: flex;
@@ -88,6 +89,7 @@ h2 {
   border: 1px solid gray;
   border-radius: 8px;
   margin-bottom: 10px;
+  background-color: white;
 }
 .newToDo {
   position: relative;
@@ -111,6 +113,7 @@ h2 {
   align-items: center;
   margin-bottom: 4px;
   padding: 4px;
+  background-color: white;
 }
 .checked {
   text-decoration: line-through;
@@ -152,12 +155,14 @@ button {
 }
 
 input[type="date"] {
-  background: local;
+  background: white;
   color: gray;
   margin-right: 10px;
   margin-top: 10px;
   width: 160px;
+  border: none;
 }
+
 .dateTag {
   padding: 0%;
 }
